# app/api/http/v1/api.go
@@ -1,6 +1,8 @@
 package v1
 
 import (
+	"github.com/go-pharos/app/api/http/v1/device"
+	"github.com/go-pharos/app/api/http/v1/store"
 	_ "github.com/go-pharos/docs" // docs is generated by Swag CLI, you have to import it.
 	"github.com/labstack/echo/v4"
 	echoSwagger "github.com/swaggo/echo-swagger"
@@ -20,12 +22,16 @@ import (
 
 // @BasePath /v1
 
-func Register(c *HTTPEndpoint) *echo.Echo {
+func Register(d *device.DeviceEndpoint, s *store.StoreEndpoint) *echo.Echo {
 	e := echo.New()
+	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
 	g := e.Group("v1")
-	g.GET("/device/list", c.DeviceList)
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
+	g.GET("/device/list", d.DeviceList)
+
+	g.GET("/store/file/list", s.StoreList)
+	g.POST("/store/file/move", s.MoveFile)
+	g.POST("/store/file/load", s.Load)
 
 	return e
 }
